--- a/parcel-bundle-reports/main.html
+++ b/parcel-bundle-reports/main.html
@@ -292,7 +292,7 @@ function(){window.console.error("FoamTree is not supported on this browser.")};w
 
               </script>
               <script id="bundle-data" type="application/json">
-                {"groups":[{"label":"dist/main.js","weight":1372,"groups":[{"label":"Code from unknown source files","weight":4059},{"label":"<anon>","weight":0},{"label":"src","weight":0,"groups":[{"label":"index.ts","weight":0},{"label":"create-container-queries/index.ts","weight":0},{"label":"get-container/index.ts","weight":0},{"label":"get-container-attributes/index.ts","weight":0},{"label":"get-container-query/index.ts","weight":0},{"label":"get-max-width/index.ts","weight":0},{"label":"get-breakpoints/index.ts","weight":0}]}]}]}
+                {"groups":[{"label":"dist/main.js","weight":1372,"groups":[{"label":"src","weight":1130,"groups":[{"label":"create-container-queries/index.ts","weight":456},{"label":"get-breakpoints/index.ts","weight":209},{"label":"index.ts","weight":195},{"label":"get-container/index.ts","weight":131},{"label":"get-max-width/index.ts","weight":60},{"label":"get-container-attributes/index.ts","weight":57},{"label":"get-container-query/index.ts","weight":22}]},{"label":"Code from unknown source files","weight":242},{"label":"<anon>","weight":0}]}]}
               </script>
             </head>
             <body>
